Added mobile touch controls

--- a/index.html
+++ b/index.html
@@ -294,6 +294,18 @@
 
     <script src="camera.js"></script>
     <script src="script.js"></script>
+    <!-- Mobile Controls -->
+    <div id="mobile-controls" class="mobile-controls">
+        <div class="control-row">
+            <button class="mobile-btn" id="rotate-btn">↻ ROTATE</button>
+        </div>
+        <div class="control-row">
+            <button class="mobile-btn" id="left-btn">← LEFT</button>
+            <button class="mobile-btn" id="down-btn">↓ DOWN</button>
+            <button class="mobile-btn" id="right-btn">→ RIGHT</button>
+        </div>
+    </div>
+
 </body>
 
 </html>
