Move mobile controls outside 3D camera system

--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
                             <div class="onion"></div>
                             <div class="onion"></div>
                         </div>
+                        <div id="mobile-controls" class="mobile-controls hide">
+                            <button onclick="moveLeft()">⬅</button>
+                            <button onclick="moveRight()">➡</button>
+                            <button onclick="moveDown()">⬇</button>
+                            <button onclick="rotatePiece()">⬆</button>
+                        </div>
                     </div>
 
                     <div class="cuboid glass" id="glass">
@@ -291,6 +297,9 @@
     <button id="front-glass" onclick="toggleGlass()" class=""><span class="info"></span></button>
     <button id="block-joystick" onclick="toggleJoystick()" class=""><span class="info"></span><span></span></button>
     <button id="center-scene" onclick="centerScene()" class=""><span class="info"></span><span></span></button>
+    <button id="mobile-controls-toggle" onclick="toggleMobileControls()" class="">
+        <span class="info"></span>
+    </button>
 
     <script src="camera.js"></script>
     <script src="script.js"></script>
