--- a/index.html
+++ b/index.html
@@ -187,10 +187,11 @@
                             <div class="onion"></div>
                         </div>
                         <div id="mobile-controls" class="mobile-controls hide">
-                            <button onclick="moveLeft()">⬅</button>
-                            <button onclick="moveRight()">➡</button>
-                            <button onclick="moveDown()">⬇</button>
-                            <button onclick="rotatePiece()">⬆</button>
+                            <button ontouchstart="moveLeft()" onclick="moveLeft()">⬅</button>
+                            <button ontouchstart="moveRight()" onclick="moveRight()">➡</button>
+                            <button ontouchstart="moveDown()" onclick="moveDown()">⬇</button>
+                            <button ontouchstart="rotatePiece()" onclick="rotatePiece()">⬆</button>
+
                         </div>
                     </div>
 
