Move mobile controls outside 3D camera system

--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@
 
     </section>
 
-    <audio src="https://cdn.josetxu.com/audio/tetris-credit.mp3" id="a-credit"> </audio>
-    <audio src="https://cdn.josetxu.com/audio/tetris-loginska.mp3" id="a-music1" loop preload="auto"> </audio>
-    <audio src="https://cdn.josetxu.com/audio/tetris-troika.mp3" id="a-music2" loop preload="auto"> </audio>
-    <audio src="https://cdn.josetxu.com/audio/tetris-bradinsky.mp3" id="a-music3" loop preload="auto"> </audio>
-    <audio src="https://cdn.josetxu.com/audio/tetris-line.mp3" id="a-line"> </audio>
-    <audio src="https://cdn.josetxu.com/audio/tetris-round.mp3" id="a-round"> </audio>
-    <audio src="https://cdn.josetxu.com/audio/tetris-gameover.mp3" id="a-gameover"> </audio>
+    <audio src="audio/tetris-credit.mp3" id="a-credit"> </audio>
+    <audio src="audio/tetris-loginska.mp3" id="a-music1" loop preload="auto"> </audio>
+    <audio src="audio/tetris-troika.mp3" id="a-music2" loop preload="auto"> </audio>
+    <audio src="audio/tetris-bradinsky.mp3" id="a-music3" loop preload="auto"> </audio>
+    <audio src="audio/tetris-line.mp3" id="a-line"> </audio>
+    <audio src="audio/tetris-round.mp3" id="a-round"> </audio>
+    <audio src="audio/tetris-gameover.mp3" id="a-gameover"> </audio>
 
     <button id="sound" onclick="toggleSound()" class=""><span class="info"></span></button>
     <button id="music" onclick="togglePlay()" class="off"><span class="info"></span></button>
